Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2018-04-18 12:46:06 -0400
  - Add real_home_dir method
    mildly begrudgingly

0.03      2017-08-07 15:52:03 -0400
  - Fall back on getlogin or getpwuid for determining username

0.02      2017-07-23 08:59:06 -0400
  - warn via either note or diag (depending on if the test fails) if
    File::HomeDir::Test has been loaded.

0.01      2017-07-22 21:58:35 -0400
  - initial version